[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/ui_elements/first_time_settings_panel/first_time_settings_panel.gd" type="Script" id=1]
[ext_resource path="res://themes/main.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.109804, 0.109804, 0.109804, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.972549, 0.960784, 0.960784, 1 )
border_blend = true

[node name="FirstTimeSettingsPanel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -346.0
margin_top = -315.5
margin_right = 346.0
margin_bottom = 315.5
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 30.0
margin_right = -11.0
margin_bottom = -101.0
custom_constants/separation = 20

[node name="Label" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 669.0
margin_bottom = 200.0
rect_min_size = Vector2( 500, 200 )
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "[center]it seems that you have opened the application for the first time, or you have not set some settings. let's do it now![/center]"
text = "it seems that you have opened the application for the first time, or you have not set some settings. let's do it now!"
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 220.0
margin_right = 669.0
margin_bottom = 267.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 400.0
margin_bottom = 44.0
rect_min_size = Vector2( 400, 0 )
text = "UI Language"

[node name="UILanguageOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 404.0
margin_right = 654.0
margin_bottom = 47.0
rect_min_size = Vector2( 250, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 287.0
margin_right = 669.0
margin_bottom = 334.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 400.0
margin_bottom = 44.0
rect_min_size = Vector2( 400, 0 )
text = "Native language"

[node name="NativeLanguageOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 404.0
margin_right = 654.0
margin_bottom = 47.0
rect_min_size = Vector2( 250, 0 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 354.0
margin_right = 669.0
margin_bottom = 401.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_top = 3.0
margin_right = 400.0
margin_bottom = 44.0
rect_min_size = Vector2( 400, 0 )
text = "Language to learn"

[node name="LanguageToLearnOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 404.0
margin_right = 654.0
margin_bottom = 47.0
rect_min_size = Vector2( 250, 0 )

[node name="SaveButton" type="Button" parent="VBoxContainer"]
margin_top = 421.0
margin_right = 669.0
margin_bottom = 468.0
text = "Save"

[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
